src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_empty_worker_zero_cost_zero_tokens.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W3 [1.1: test] ─────────────────────────────────
│ ○ idle
│
│
│
│ $0.0000 │ ↓0 ↑0
