src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_extremely_high_cost_footer.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [3.1: core] ─────────────────────────────────
│ ● implementing
│
│
│
│ $999999.9900 │ ↓1000.0M ↑1000.0M
