src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_extremely_long_component_width_40.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [2.1: authentication-and-authorizat
│ ● implementing
│
│
│
│ $0.1230 │ ↓2.0k ↑1.0k
