src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_extremely_long_task_id_width_60.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [1.2.3.4.5.6.7.8.9.10.11.12.13.14.15.16.17.18.19.20.21.
│ ● implementing
│
│
│
│ $0.0420 │ ↓1.5k ↑2.3k
